# ETS_Logfile_Interpreter

./: .gitignore  LICENSE  README.md  config.toml  interpret_log.py  pyproject.toml
src/: excel_writing.py  logfile_reading.py
